--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
   background: coral;
 }
 .heading {
+  padding-top: 3%;
   width: 550px;
-  height: 300px;
+  height: 100px;
   margin: auto;
   text-align: center;
 
@@ -18,10 +19,11 @@ body {
 }
 
 .game {
-  padding: 80px;
+  padding: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0% 15% 0% 15%;
 }
 .play-again {
   margin: auto;
@@ -29,13 +31,19 @@ body {
   font-size: 25px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
-  text-decoration: underline;
+  background-color: #000;
+  color: coral;
+  cursor: pointer;
+  padding: 10px 20px 10px 20px;
 }
-
+#buttonDiv {
+  text-align: center;
+}
 #outcome {
   font-size: 25px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
+  text-align: center;
 }
 #rock:hover,
 #paper:hover,
@@ -82,4 +90,21 @@ body {
 
 .hidden {
   display: none;
+}
+
+#playerComputerChoice {
+  padding: 60px;
+  margin: 0% 12% 0% 12%;
+}
+
+#player {
+  font-size: 40px;
+  float: left;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#computer {
+  font-size: 40px;
+  float: right;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
